--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,15 @@
+.rc-slider {
+  width: 10em !important;
+}
 
+.text {
+  display: inline;
+}
+
+.text-moving {
+  background-color: red;
+}
+
+.text-still {
+  background-color: green;
+}
